<resources>
    <string name="app_name">Luyện Thi TOEIC TLD</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Luyện Thi TOEIC TLD</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Đây là trang luyện tập</string>
    <string name="login_HintEmail">Email ID</string>
    <string name="login_HintPassword">Password</string>
    <string name="login_ForgotPassword">Quên mật khẩu ?</string>
    <string name="login_LoginButton">Đăng Nhập</string>
    <string name="login_TextNoAccount">Không có tài khoản ?</string>
    <string name="login_TextSingUpNow">Đăng ký ngay</string>
    <string name="SignUp_Name">Họ tên</string>
    <string name="SignUp_Email">Email</string>
    <string name="SignUp_Pass">Mật khẩu</string>
    <string name="SignUp_ConfimPass">Nhập lại mật khẩu</string>
    <string name="SignUp_Button">Tiếp Tục</string>
    <string name="SignUp_TextTittle">ĐĂNG KÝ</string>
    <string name="SignUp_titleName">Nhập tên của bạn *</string>
    <string name="SignUp_titleEmail">Địa chỉ Email *</string>
    <string name="SignUp_titlePass">Nhập mật khẩu *</string>
    <string name="SignUp_titleConfPass">Nhập lại mật khẩu *</string>
    <string name="Login_ButtonGoogle">Đăng nhập với google</string>
    <string name="Account_LogoutButton">Đăng Xuất</string>
    <string name="drawer_Practis">Luyện tâp</string>
    <string name="drawer_Account">Thống kê</string>
    <string name="drawer_LeaderBroad">Tài khoản</string>


</resources>