<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_3"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/backB"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:elevation="3dp"
        android:padding="16dp"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,UseCompoundDrawables">

        <ImageView
            android:layout_width="125sp"
            android:layout_height="125sp"
            android:background="@drawable/logo_transparent"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/edit_layout"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/SignUp_TextTittle"
            android:textSize="26sp"
            android:gravity="center"
            android:textColor="#085860"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="32dp"
            android:layout_width="wrap_content"
            android:text="@string/SignUp_titleName"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="32dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:drawablePadding="16dp"
            android:backgroundTint="@color/PrimaryColor"
            android:textColor="@color/black"
            android:hint="@string/SignUp_Name"
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="text"
            tools:ignore="Autofill,UnusedAttribute" />

        <TextView
            android:layout_marginStart="32dp"
            android:layout_width="wrap_content"
            android:text="@string/SignUp_titleEmail"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:drawablePadding="16dp"
            android:backgroundTint="@color/PrimaryColor"
            android:textColor="@color/black"
            android:hint="@string/SignUp_Email"
            android:id="@+id/emailID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="text"
            tools:ignore="Autofill,TextFields,UnusedAttribute" />

        <TextView
            android:layout_marginStart="32dp"
            android:layout_width="wrap_content"
            android:text="@string/SignUp_titlePass"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:drawablePadding="16dp"
            android:backgroundTint="@color/PrimaryColor"
            android:textColor="@color/black"
            android:hint="@string/SignUp_Pass"
            android:id="@+id/passwordSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="Autofill,UnusedAttribute" />

        <TextView
            android:layout_marginStart="32dp"
            android:layout_width="wrap_content"
            android:text="@string/SignUp_titleConfPass"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:drawablePadding="16dp"
            android:backgroundTint="@color/PrimaryColor"
            android:textColor="@color/black"
            android:hint="@string/SignUp_ConfimPass"
            android:id="@+id/confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="Autofill,UnusedAttribute" />
    </LinearLayout>


    <Button
        android:id="@+id/singUpB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:elevation="5sp"
        android:translationZ="3dp"
        android:stateListAnimator="@null"
        android:background="@drawable/round_corner_button"
        android:text="@string/SignUp_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>