<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_3"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,UseCompoundDrawables">

        <ImageView
            android:layout_width="125sp"
            android:layout_height="125sp"
            android:background="@drawable/logo_transparent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/appNameLoad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#0EAA9B"
            android:textSize="32sp"
            android:textStyle="bold" />

    </LinearLayout>

    <EditText
        android:drawableStart="@drawable/ic_account"
        android:drawableTint="@color/PrimaryColor"
        android:drawablePadding="16dp"
        android:backgroundTint="@color/PrimaryColor"
        android:textColor="@color/black"
        android:hint="@string/login_HintEmail"
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="Autofill,UnusedAttribute" />

    <EditText
        android:drawableStart="@drawable/ic_password"
        android:drawableTint="@color/PrimaryColor"
        android:drawablePadding="16dp"
        android:backgroundTint="@color/PrimaryColor"
        android:textColor="@color/black"
        android:hint="@string/login_HintPassword"
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_ForgotPassword"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:elevation="5sp"
        android:translationZ="3dp"
        android:stateListAnimator="@null"
        android:background="@drawable/round_corner_button"
        android:text="@string/login_LoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="48dp"
        android:textSize="16dp"
        android:text="@string/login_TextNoAccount"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/singUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="46dp"
        android:text="@string/login_TextSingUpNow"
        android:textSize="18dp"
        android:textColor="@color/GreenColor"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton"
        tools:ignore="SpUsage" />

    <RelativeLayout
        android:id="@+id/google_signB"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="64dp"
        android:background="#2D22BC"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_google_logo"
            android:background="@color/white"
            android:padding="4dp"
            android:id="@+id/img_google"
            android:layout_margin="4dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Login_ButtonGoogle"
            android:textColor="@color/white"
            android:layout_toEndOf="@+id/img_google"
            android:textSize="20dp"
            android:gravity="center_vertical"
            android:layout_marginStart="10dp"
            tools:ignore="SpUsage" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>